fix lottery dark mode

--- a/src/components/SelectOption/styles.module.scss
+++ b/src/components/SelectOption/styles.module.scss
@@ -7,6 +7,7 @@
     border-color: transparent;
     margin: 0 auto;
     border-radius: 4px;
+    border: 1px solid var(--catsKillWhiteToDark) !important;
   }
 
   :global(.select__control):hover {
