--- a/src/containers/lottery/round/style.module.scss
+++ b/src/containers/lottery/round/style.module.scss
@@ -55,6 +55,7 @@
 
 .buy-ticket {
   padding-bottom: 24px;
+  color: var(--blackToWhite);
   .cost {
     display: flex;
     justify-content: space-between;
@@ -82,6 +83,7 @@
       height: 48px;
       border: solid 1px var(--catsKillWhite);
       border-top-right-radius: 0;
+      background-color: var(--whiteToDarkGray);
       border-bottom-right-radius: 0;
       outline: none;
     }
@@ -118,6 +120,7 @@
     color: black;
     font-size: 18px;
     margin-bottom: 6px;
+    color: var(--blackToWhite);
   }
   p {
     color: var(--rollingStone);
@@ -141,7 +144,7 @@
 
 .roundItem {
   width: 100%;
-  background-color: white;
+  background-color: var(--white);
   border-radius: 4px;
   padding: 8px 16px;
   box-shadow: 0 2px 20px 0 rgba(134, 146, 164, 0.08);
@@ -149,13 +152,17 @@
 }
 
 .ctab {
-  background: white;
+  background: var(--white);
   padding: 14px 24px;
   border-radius: 4px;
 }
 
 .input {
   width: 292px;
+  input {
+    background-color: var(--whiteToDarkGray);
+    border: var(--auctionSearchInputBorder);
+  }
 }
 
 .round-info {
@@ -177,7 +184,7 @@
   & > div {
     padding: 15px 14px;
     border-radius: 4px;
-    background: white;
+    background: var(--white);
     box-shadow: 0 2px 20px 0 rgba(134, 146, 164, 0.08);
   }
 
